# umi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html
.github/workflows/: test.yml
docs/: ENVELOPE_CONTRACT.md  SCHEMA_DESIGN.md  umi-landing-page.html
examples/: health-check.md
install/: Install-UMI.ps1  install-umi.sh
mcp-server/: .coverage  README.md  claude_desktop_config.json  pyproject.toml
mcp-server/tests/: test_tools.py  test_tools_extended.py
mcp-server/umi_mcp/: __init__.py  server.py
mcp-server/umi_mcp/tools/: disk.py  events.py  network.py  process.py  service.py  uptime.py  user.py
powershell/Tests/: UMI.Tests.ps1
powershell/UMI/: UMI.psd1  UMI.psm1
powershell/UMI/Private/: Helpers.ps1
powershell/UMI/Public/: Get-UmiDisk.ps1  Get-UmiNetwork.ps1  Get-UmiProcess.ps1  Get-UmiUptime.ps1  Get-UmiUser.ps1  Test-UmiEnvironment.ps1
schema/: disk.schema.json  events.schema.json  network.schema.json  process.schema.json  service.schema.json  uptime.schema.json  user.schema.json
site/: index.html
