[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "umi-mcp"
version = "0.1.0"
description = "UMI MCP server — local system awareness for AI agents"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.scripts]
umi-mcp = "umi_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["umi_mcp"]
